welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:27: error: identifier expected but 'override' found.
def override run() {
    ^